TEST_PROGRAMS/INVALID/daniel_pham/i3.min
# Missing endif

if x then
else

